--- a/myapp/public/css/style.css
+++ b/myapp/public/css/style.css
@@ -290,7 +290,12 @@ nav ul li a:hover {
 .subscribe-form button:hover {
     background-color: #f0f0f0;
 }
-
+@media (max-width: 600px) {
+    .subscribe-form input[type="email"] {
+        width: calc(100% - 20px);
+        margin-right: 0;
+    }
+}
 footer {
     background-color: #333;
     color: #fff;
