--- a/myapp/public/css/style.css
+++ b/myapp/public/css/style.css
@@ -53,7 +53,7 @@ nav ul li a:hover {
 }
 
 .hero-video {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
     min-width: 100%;
@@ -61,7 +61,13 @@ nav ul li a:hover {
     width: auto;
     height: auto;
     transform: translate(-50%, -50%);
-    z-index: -1;
+    z-index: -1; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .hero-content {
